testsuite/tests/parser/should_fail/RecordDotSyntaxFail3.stderr

RecordDotSyntaxFail3.hs:22:14: error: [GHC-58481]
    Parse error on input ‘(’.
    Expected one of 'as', 'hiding', 'qualified', 'export', 'label',
                    'dynamic', 'safe', 'interruptible', 'unsafe', 'family', ...
